[package]
name = "xpt2046"
version = "0.1.2"
edition = "2021"
description = "Embedded-hal based XPT2046 driver for TFT LCD displays"
authors = ["VersBInarii <versbinarii@gmail.com>"]
keywords = ["embedded-hal-driver", "xpt2046", "touch", "LCD", "no_std"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xpt2046"

[dependencies]
embedded-hal = "=1.0.0-alpha.7"
embedded-graphics-core = "0.3.3"
defmt = { version = "0.3.0", optional = true }

[dev-dependencies]
cortex-m-rtic = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt-rtt = "0.3.0"
panic-semihosting = "0.6"
ili9341 = "0.5.0"
embedded-graphics = "0.7.1"

[dev-dependencies.stm32f4xx-hal]
version = "0.13.0"
features = ["stm32f411"]

[features]
with_defmt = ["defmt"]

[[example]]
name = "rtic"
